fix(importaccount): entire page sits off center on mobile (AP-253)

--- a/pages/setup/InputAccount/InputAccount.less
+++ b/pages/setup/InputAccount/InputAccount.less
@@ -7,11 +7,13 @@
   text-align: center;
 
   .input-account-body {
-    min-width: 32rem;
     align-self: center;
+    padding: 0 @normal-spacing;
+    max-width: 100vw;
     margin-bottom: 25vh;
-    .recover-account {
-      min-width: 24rem;
+    .recover-account.button {
+      width: 24rem;
+      max-width: 100%;
     }
     .columns {
       margin: @xlarge-spacing auto;
